--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,3 +5,7 @@ updates:
     schedule:
       interval: daily
 
+ - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "daily"
