--- a/pom.xml
+++ b/pom.xml
@@ -59,16 +59,15 @@
     <tag>HEAD</tag>
   </scm>
 
-  <!-- Bring some sanity to version numbering... -->
   <properties>
-    <jenkins.version>2.222.4</jenkins.version>
+    <java.level>8</java.level>
+    <jenkins.version>2.319.1</jenkins.version>
     <hpi.compatibleSinceVersion>1.5.0</hpi.compatibleSinceVersion>
     <google.api.version>1.25.0</google.api.version>
     <google.http.version>1.21.0</google.http.version>
     <google.guava.version>31.0.1-jre</google.guava.version>
     <google-oauth.version>1.0.0</google-oauth.version>
     <storage.revision>158</storage.revision>
-    <java.level>8</java.level>
     <concurrency>5</concurrency>
     <skipIts>true</skipIts>
   </properties>
@@ -77,8 +76,8 @@
     <dependencies>
       <dependency>
         <groupId>io.jenkins.tools.bom</groupId>
-        <artifactId>bom-2.222.x</artifactId>
-        <version>21</version>
+        <artifactId>bom-2.319.x</artifactId>
+        <version>1148.v7261f385f859</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
