--- a/pom.xml
+++ b/pom.xml
@@ -68,10 +68,11 @@
     <jenkins.version>2.319.3</jenkins.version>
     <gitHubRepo>jenkinsci/${project.artifactId}</gitHubRepo>
     <hpi.compatibleSinceVersion>1.5.0</hpi.compatibleSinceVersion>
-    <google.api.version>1.34.1</google.api.version>
+    <google.api.version>1.35.2</google.api.version>
     <google.http.version>1.42.2</google.http.version>
     <google.guava.version>31.0.1-jre</google.guava.version>
     <google-oauth.version>1.34.1</google-oauth.version>
+    <google-oauth-plugin.version>1.0.8</google-oauth-plugin.version>
     <storage.revision>20220705</storage.revision>
     <concurrency>5</concurrency>
     <skipIts>true</skipIts>
@@ -220,7 +221,7 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>google-oauth-plugin</artifactId>
-      <version>1.0.7</version>
+      <version>${google-oauth-plugin.version}</version>
       <exclusions>
         <exclusion>
           <groupId>net.sourceforge.findbugs</groupId>
