--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
       Lots of boilerplate from: https://wiki.jenkins-ci.org/display/JENKINS/Hosting+Plugins
   -->
   <artifactId>google-storage-plugin</artifactId>
-  <version>1.5.8</version>
+  <version>1.5.9-SNAPSHOT</version>
   <packaging>hpi</packaging>
 
   <name>Google Cloud Storage plugin</name>
@@ -58,7 +58,7 @@
     <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
     <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
     <url>https://github.com/${gitHubRepo}</url>
-    <tag>google-storage-plugin-1.5.8</tag>
+    <tag>${scmTag}</tag>
   </scm>
 
   <!-- Bring some sanity to version numbering... -->
