--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
       Lots of boilerplate from: https://wiki.jenkins-ci.org/display/JENKINS/Hosting+Plugins
   -->
   <artifactId>google-storage-plugin</artifactId>
-  <version>1.5.9-SNAPSHOT</version>
+  <version>${revision}${changelist}</version>
   <packaging>hpi</packaging>
 
   <name>Google Cloud Storage plugin</name>
@@ -63,7 +63,7 @@
 
   <!-- Bring some sanity to version numbering... -->
   <properties>
-    <revision>1.5.7</revision>
+    <revision>1.5.9</revision>
     <changelist>-SNAPSHOT</changelist>
     <jenkins.version>2.361.4</jenkins.version>
     <gitHubRepo>jenkinsci/${project.artifactId}</gitHubRepo>
