--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
     <hpi.compatibleSinceVersion>1.5.0</hpi.compatibleSinceVersion>
     <google.api.version>1.35.2</google.api.version>
     <google.http.version>1.42.2</google.http.version>
-    <google.guava.version>31.0.1-jre</google.guava.version>
+    <google.guava.version>32.1.2-jre</google.guava.version>
     <google-oauth.version>1.34.1</google-oauth.version>
     <google-oauth-plugin.version>1.0.8</google-oauth-plugin.version>
     <storage.revision>20220705</storage.revision>
@@ -98,6 +98,11 @@
         <groupId>com.google.http-client</groupId>
         <artifactId>google-http-client-gson</artifactId>
         <version>1.43.1</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.j2objc</groupId>
+        <artifactId>j2objc-annotations</artifactId>
+        <version>2.8</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
