--- a/pom.xml
+++ b/pom.xml
@@ -65,14 +65,13 @@
   <properties>
     <revision>1</revision>
     <changelist>999999-SNAPSHOT</changelist>
-    <jenkins.version>2.361.4</jenkins.version>
+    <jenkins.version>2.387.3</jenkins.version>
     <gitHubRepo>jenkinsci/${project.artifactId}</gitHubRepo>
     <hpi.compatibleSinceVersion>1.5.0</hpi.compatibleSinceVersion>
     <google.api.version>1.35.2</google.api.version>
     <google.http.version>1.42.2</google.http.version>
     <google.guava.version>32.1.2-jre</google.guava.version>
     <google-oauth.version>1.34.1</google-oauth.version>
-    <google-oauth-plugin.version>1.0.8</google-oauth-plugin.version>
     <storage.revision>20220705</storage.revision>
     <concurrency>5</concurrency>
     <skipIts>true</skipIts>
@@ -84,8 +83,8 @@
     <dependencies>
       <dependency>
         <groupId>io.jenkins.tools.bom</groupId>
-        <artifactId>bom-2.361.x</artifactId>
-        <version>2102.v854b_fec19c92</version>
+        <artifactId>bom-2.387.x</artifactId>
+        <version>2465.va_e76ed7b_3061</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -242,7 +241,6 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>google-oauth-plugin</artifactId>
-      <version>${google-oauth-plugin.version}</version>
       <exclusions>
         <exclusion>
           <groupId>net.sourceforge.findbugs</groupId>
@@ -254,7 +252,6 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>google-metadata-plugin</artifactId>
-      <version>0.3.1</version>
     </dependency>
     <!-- com.google.apis -->
     <!-- https://developers.google.com/api-client-library/java/apis/storage/v1 -->
