--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
         <artifactId>j2objc-annotations</artifactId>
         <version>2.8</version>
       </dependency>
+      <dependency>
+        <groupId>org.jenkins-ci.plugins</groupId>
+        <artifactId>oauth-credentials</artifactId>
+        <version>0.646.v02b_66dc03d2e</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -235,7 +240,7 @@
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>google-oauth-plugin</artifactId>
       <!-- TODO: Remove this version when it is integrated in Jenkins BOM -->
-      <version>1.318.vb_39c5db_e3041</version>
+      <version>1.328.v6ea_0fb_df5f7b_</version>      
       <exclusions>
         <exclusion>
           <groupId>com.google.guava</groupId>
